src/pyflakes/snapshots/ruff__pyflakes__tests__F701_F701.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind:
    BreakOutsideLoop: ~
  location:
    row: 4
    column: 4
  end_location:
    row: 4
    column: 9
  fix: ~
  parent: ~
- kind:
    BreakOutsideLoop: ~
  location:
    row: 16
    column: 4
  end_location:
    row: 16
    column: 9
  fix: ~
  parent: ~
- kind:
    BreakOutsideLoop: ~
  location:
    row: 20
    column: 4
  end_location:
    row: 20
    column: 9
  fix: ~
  parent: ~
- kind:
    BreakOutsideLoop: ~
  location:
    row: 23
    column: 0
  end_location:
    row: 23
    column: 5
  fix: ~
  parent: ~

