src/pyflakes/snapshots/ruff__pyflakes__tests__F707_F707.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind: DefaultExceptNotLast
  location:
    row: 3
    column: 0
  end_location:
    row: 5
    column: 0
  fix: ~
- kind: DefaultExceptNotLast
  location:
    row: 10
    column: 0
  end_location:
    row: 12
    column: 0
  fix: ~
- kind: DefaultExceptNotLast
  location:
    row: 19
    column: 0
  end_location:
    row: 21
    column: 0
  fix: ~

