src/pyflakes/snapshots/ruff__pyflakes__tests__F722_F722.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind:
    ForwardAnnotationSyntaxError: ///
  location:
    row: 9
    column: 11
  end_location:
    row: 9
    column: 16
  fix: ~
  parent: ~

