src/pyflakes/snapshots/ruff__pyflakes__tests__F811_F811_0.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind:
    RedefinedWhileUnused:
      - bar
      - 6
  location:
    row: 10
    column: 0
  end_location:
    row: 12
    column: 0
  fix: ~

