src/pyflakes/snapshots/ruff__pyflakes__tests__F811_F811_1.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind:
    RedefinedWhileUnused:
      - FU
      - 1
  location:
    row: 1
    column: 17
  end_location:
    row: 1
    column: 26
  fix: ~
  parent: ~

