src/pyflakes/snapshots/ruff__pyflakes__tests__F811_F811_12.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind:
    RedefinedWhileUnused:
      - mixer
      - 2
  location:
    row: 6
    column: 19
  end_location:
    row: 6
    column: 24
  fix: ~
  parent: ~

