src/pyflakes/snapshots/ruff__pyflakes__tests__F811_F811_15.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind:
    RedefinedWhileUnused:
      - fu
      - 1
  location:
    row: 4
    column: 0
  end_location:
    row: 6
    column: 0
  fix: ~

